<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="MotorO" Id="{f0059269-70d6-4eef-87c4-d88fb8396393}">
    <Declaration><![CDATA[TYPE MotorO :
STRUCT
	Coil : BOOL;
	FaultStatus : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>