<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="VFDO" Id="{af28fdba-27ed-4f51-a9bb-b90dc667e24c}">
    <Declaration><![CDATA[TYPE VFDO EXTENDS MotorO :
STRUCT
	OutputFreq : INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>